--- a/paper/1-catalog/refs.bib
+++ b/paper/1-catalog/refs.bib
@@ -1,12 +1,100 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Adrian Price-Whelan at 2018-03-19 19:22:07 -0400 
+
+%% Created for Adrian Price-Whelan at 2018-03-20 15:57:29 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{Huber:2017,
+	Abstractnote = {Asteroseismic Hertzsprung-Russell diagram from Fig. 8 of Huber et al. (2011), with oscillation amplitudes in the Kepler bandpass converted into radial velocity amplitudes following Kjeldsen & Bedding (1995) with a central wavelength for the Kepler bandpass of 600nm. The diagram allows an estimation of the expected radial velocity jitter for a given oscillation timescale (y-axis). Note that higher amplitude jitter due to granulation may occur on longer timescales. Solid lines show representative solar-metallicity evolutionary tracks with masses as indicated.},
+	Author = {Huber, Daniel},
+	Date-Added = {2018-03-20 19:57:25 +0000},
+	Date-Modified = {2018-03-20 19:57:28 +0000},
+	Doi = {10.6084/m9.figshare.4887380.v1},
+	Month = {Apr},
+	Publisher = {figshare},
+	Title = {Radial Velocity Oscillation Amplitudes of Kepler Stars},
+	Url = {https://figshare.com/articles/Radial_Velocity_Oscillation_Amplitudes_of_Kepler_Stars/4887380/1},
+	Year = {2017},
+	Bdsk-Url-1 = {https://figshare.com/articles/Radial_Velocity_Oscillation_Amplitudes_of_Kepler_Stars/4887380/1},
+	Bdsk-Url-2 = {https://dx.doi.org/10.6084/m9.figshare.4887380.v1}}
+
+@article{Huber:2011,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2011ApJ...743..143H},
+	Archiveprefix = {arXiv},
+	Author = {{Huber}, D. and {Bedding}, T.~R. and {Stello}, D. and {Hekker}, S. and {Mathur}, S. and {Mosser}, B. and {Verner}, G.~A. and {Bonanno}, A. and {Buzasi}, D.~L. and {Campante}, T.~L. and {Elsworth}, Y.~P. and {Hale}, S.~J. and {Kallinger}, T. and {Silva Aguirre}, V. and {Chaplin}, W.~J. and {De Ridder}, J. and {Garc{\'{\i}}a}, R.~A. and {Appourchaux}, T. and {Frandsen}, S. and {Houdek}, G. and {Molenda-{\.Z}akowicz}, J. and {Monteiro}, M.~J.~P.~F.~G. and {Christensen-Dalsgaard}, J. and {Gilliland}, R.~L. and {Kawaler}, S.~D. and {Kjeldsen}, H. and {Broomhall}, A.~M. and {Corsaro}, E. and {Salabert}, D. and {Sanderfer}, D.~T. and {Seader}, S.~E. and {Smith}, J.~C.},
+	Date-Added = {2018-03-20 19:55:34 +0000},
+	Date-Modified = {2018-03-20 19:55:35 +0000},
+	Doi = {10.1088/0004-637X/743/2/143},
+	Eid = {143},
+	Eprint = {1109.3460},
+	Journal = {\apj},
+	Keywords = {stars: late-type, stars: oscillations, techniques: photometric},
+	Month = dec,
+	Pages = {143},
+	Primaryclass = {astro-ph.SR},
+	Title = {{Testing Scaling Relations for Solar-like Oscillations from the Main Sequence to Red Giants Using Kepler Data}},
+	Volume = 743,
+	Year = 2011,
+	Bdsk-Url-1 = {https://dx.doi.org/10.1088/0004-637X/743/2/143}}
+
+@article{Hekker:2008,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2008A%26A...480..215H},
+	Archiveprefix = {arXiv},
+	Author = {{Hekker}, S. and {Snellen}, I.~A.~G. and {Aerts}, C. and {Quirrenbach}, A. and {Reffert}, S. and {Mitchell}, D.~S.},
+	Date-Added = {2018-03-20 19:46:05 +0000},
+	Date-Modified = {2018-03-20 19:46:07 +0000},
+	Doi = {10.1051/0004-6361:20078321},
+	Eprint = {0801.0741},
+	Journal = {\aap},
+	Keywords = {stars: variables: general, techniques: radial velocities, line: profiles},
+	Month = mar,
+	Pages = {215-222},
+	Title = {{Precise radial velocities of giant stars. IV. A correlation between surface gravity and radial velocity variation and a statistical investigation of companion properties}},
+	Volume = 480,
+	Year = 2008,
+	Bdsk-Url-1 = {https://dx.doi.org/10.1051/0004-6361:20078321}}
+
+@article{Garcia:2018,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2018arXiv180108377G},
+	Archiveprefix = {arXiv},
+	Author = {{Garcia}, R.~A. and {Stello}, D.},
+	Date-Added = {2018-03-20 19:36:06 +0000},
+	Date-Modified = {2018-03-20 19:36:08 +0000},
+	Eprint = {1801.08377},
+	Journal = {ArXiv e-prints},
+	Keywords = {Astrophysics - Solar and Stellar Astrophysics},
+	Month = jan,
+	Primaryclass = {astro-ph.SR},
+	Title = {{Asteroseismology of red giant stars}},
+	Year = 2018}
+
+@article{Serenelli:2017,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2017ApJS..233...23S},
+	Archiveprefix = {arXiv},
+	Author = {{Serenelli}, A. and {Johnson}, J. and {Huber}, D. and {Pinsonneault}, M. and {Ball}, W.~H. and {Tayar}, J. and {Silva Aguirre}, V. and {Basu}, S. and {Troup}, N. and {Hekker}, S. and {Kallinger}, T. and {Stello}, D. and {Davies}, G.~R. and {Lund}, M.~N. and {Mathur}, S. and {Mosser}, B. and {Stassun}, K.~G. and {Chaplin}, W.~J. and {Elsworth}, Y. and {Garc{\'{\i}}a}, R.~A. and {Handberg}, R. and {Holtzman}, J. and {Hearty}, F. and {Garc{\'{\i}}a-Hern{\'a}ndez}, D.~A. and {Gaulme}, P. and {Zamora}, O.},
+	Date-Added = {2018-03-20 19:10:52 +0000},
+	Date-Modified = {2018-03-20 19:10:54 +0000},
+	Doi = {10.3847/1538-4365/aa97df},
+	Eid = {23},
+	Eprint = {1710.06858},
+	Journal = {\apjs},
+	Keywords = {asteroseismology, catalogs, stars: fundamental parameters, surveys},
+	Month = dec,
+	Pages = {23},
+	Primaryclass = {astro-ph.SR},
+	Title = {{The First APOKASC Catalog of Kepler Dwarf and Subgiant Stars}},
+	Volume = 233,
+	Year = 2017,
+	Bdsk-Url-1 = {https://dx.doi.org/10.3847/1538-4365/aa97df}}
 
 @article{Garcia-Perez:2016,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
